2009-12-30  Petasis George  <petasis@iit.demokritos.gr>
        * /cmake:
        * /CMakeLists.txt: Added support for building TkDND with cmake (i.e.
        under windows).

2009-12-29  Petasis George  <petasis@iit.demokritos.gr>
        * /library/tkdnd_macosx.tcl:
        * /macosx/macdnd.m: Changes to better integrate the work done by
        Kevin Walzer with the rest of TkDND, since OS X seems to mimic the
        XDND implementation. tkdnd_macosx.tcl is now a stub file, with most of
        the work being done by the unix (XDND) code.
        I think that OS X drop support is now working.

2009-12-09  Petasis George  <petasis@iit.demokritos.gr>
        * /library/tkdnd_macosx.tcl:
        * /macosx/macdnd.m: Updates to better integrate the OS X type
        registration command with the rest of the TkDND internal API.

2009-12-01  Walzer Kevin    <kw@codebykevin.com>
        * /macosx/*: Initial support for drop targets under OS X (Cocoa).

2007-02-09  Petasis George  <petasis@iit.demokritos.gr>
        * /unix/TkDND_XDND.c: Fixed a bug in TkDND_RegisterTypesObjCmd, where
        Tk_Parent was used to determine if a provided path was a toplevel.
        Replaced by a check through Tk_IsTopLevel.
        Bug reported by Alain Bertrand <alain.mp.bertrand@tele2.be>

2006-04-24  Petasis George  <petasis@iit.demokritos.gr>
        * TkDND version 2.0 started. 